Added: Static background & others

--- a/index.html
+++ b/index.html
@@ -10,16 +10,94 @@
 <title>test</title>
 
 <style>
-body {
-	background-color: #c9f3ff;
-	}
 </style>
 
 <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-<pre id="fancy-bg"> Buzătel Iulian</pre>
+
+<div id="fancy-bg"> Buzătel Iulian</div>
+
+<pre style="text-shadow: 2px 2px 5px white;">
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+hh
+
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+h
+hh
+
+h
+h
+h
+h
+hg
+h
+gf
+
+h
+hgfh
+
+hg
+
+hh
+h
+h
+fg
+fg
+g
+g
+ffg
+g
+fg
+f
+df
+df
+d
+fd
+fd
+f
+d
+h
+h
+h
+
+h
+h
+h
+h
+h
+h
+h
+
+h
+</pre>
+
 </body>
 
 </html>
