--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 
 <body>
 
-<div id="fancy-bg"> Buzătel Iulian</div>
+<div class="surr">
+<img src="Images/profile_pic.jpg" style=""> 
+<div class="inn">
+Buzătel Iulian Valentin blabalbalbabalalababalbalba
+</div>
+</div>
 
 <pre style="text-shadow: 2px 2px 5px white;">
 h
