--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <body>
 
 <div class="surr">
-<img src="Images/profile_pic.jpg" style=""> 
+<img src="Images/profile_pic.jpg" class="profile-img"> 
 <div class="inn">
-Buzătel Iulian Valentin blabalbalbabalalababalbalba
+<span class=title1>Buzătel Iulian</span>
+<p class=content1>Beginner programmer and electronics something something</p>
 </div>
 </div>
 
