Centered title card

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+<div class="ful-page">
 <div class="surr">
 <img src="Images/profile_pic.jpg" class="profile-img"> 
 <div class="inn">
@@ -24,7 +24,7 @@
 <p class=content1>Beginner programmer and electronics something something</p>
 </div>
 </div>
-
+</div>
 <pre style="text-shadow: 2px 2px 5px white;">
 h
 h
