--- a/index.html
+++ b/index.html
@@ -16,15 +16,22 @@
 </head>
 
 <body>
+
+<div style='position:fixed;top:0px:left:0px;'>Text</div>
+
 <div class="ful-page">
-<div class="surr">
+<div class="page-surr" id="surr">
+
 <img src="Images/profile_pic.jpg" class="profile-img"> 
+
 <div class="inn">
 <span class=title1>Buzătel Iulian</span>
 <p class=content1>Beginner programmer and electronics something something</p>
 </div>
+
 </div>
 </div>
+
 <pre style="text-shadow: 2px 2px 5px white;">
 h
 h
@@ -103,6 +110,8 @@ h
 
 h
 </pre>
+
+<script src="myScript.js"></script>
 
 </body>
 
