Centered bg & styled title card

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <img src="Images/profile_pic.jpg" class="profile-img"> 
 
 <div class="inn">
-<span class=title1>Buzătel Iulian</span>
-<p class=content1>Beginner programmer and electronics something something</p>
+<p class=title1>Buzătel Iulian</p>
+<p class=content1>Beginner programmer and electronics something something something</p>
 </div>
 
 </div>
