--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<div style='position:fixed;top:0px:left:0px;'>Text</div>
+<div id='navbar'>Text</div>
 
 <div class="ful-page">
 <div class="page-surr" id="surr">
