Fixed res/aspect disproportion

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="inn">
 <p class=title1>Buzătel Iulian</p>
-<p class=content1>Beginner programmer and electronics something something something</p>
+<p class=content1>Beginner programmer and electronics engineer</p>
 </div>
 
 </div>
