Blended in scrollbar

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-
+<img src="Images/gradient_frame.png" class="bg-overlay">
 <div id='navbar'>Text</div>
 
 <div class="ful-page">
 <div class="page-surr" id="surr">
 
-<img src="Images/profile_pic.jpg" class="profile-img"> 
+<img src="Images/Km5L3Gxa_4x.jpg" class="profile-img"> 
 
 <div class="inn">
 <p class=title1>Buzătel Iulian</p>
