+ home button div

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 <img src="Images/gradient_frame.png" class="bg-overlay">
 <div id='navbar'>Text</div>
+<div class="left-stick"></div>
 
 <div class="ful-page">
 <div class="page-surr" id="surr">
