Added home button functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
 <img src="Images/gradient_frame.png" class="bg-overlay">
 <div id='navbar'>Text</div>
-<div class="left-stick"></div>
+<div class="left-stick">
+<button id="home-button">H</button>
+</div>
 
 <div class="ful-page">
 <div class="page-surr" id="surr">
