saving first succesfull button animation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <img src="Images/gradient_frame.png" class="bg-overlay">
 <div id='navbar'>Text</div>
 <div class="left-stick">
-<button id="home-button">H</button>
+<button id="home-button">
+<img src="Images/white_up_arrow.png" class="home-icon">
+</button>
 </div>
 
 <div class="ful-page">
