Finished scroll to top button

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 <img src="Images/gradient_frame.png" class="bg-overlay">
 <div id='navbar'>Text</div>
 <div class="left-stick">
-<button id="home-button">
-<img src="Images/white_up_arrow.png" class="home-icon">
-</button>
+<input type="image" src="Images/white_up_arrow.png" id="home-icon">
 </div>
 
 <div class="ful-page">
