Added socials buttons

--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
 
 <style>
 </style>
-
+<!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"-->
 <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
 <img src="Images/gradient_frame.png" class="bg-overlay">
-<div id='navbar'>Text</div>
+<div id='navbar'>
+<a href="#" class="fa fa-linkedin"></a>
+<a href="#" class="fa fa-github"></a>
+</div>
+
 <div class="left-stick">
 <input type="image" src="Images/white_up_arrow.png" id="home-icon">
 </div>
 
 <div class="ful-page">
-<div class="page-surr" id="surr">
+<div class="title-surr" id="surr">
 
 <img src="Images/Km5L3Gxa_4x.jpg" class="profile-img"> 
 
