--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 </div>
 </div>
 
+<div class="page-surr">
+<div class="inn">
+CPPMON is a rudimentary system monitor for Unix systems written in C++, with the intent that its components can be reused in other projects.
+</div>
+<img src="Images/BasicUI.png" class="project-img">
+
+</div>
 <pre style="text-shadow: 2px 2px 5px white;">
 h
 h
