Added personal icon & others

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>test</title>
-
+<link rel="icon" type="image/x-icon" href="Images/BI.ico">
 <style>
 </style>
 <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"-->
@@ -19,12 +19,16 @@
 <img src="Images/gradient_frame.png" class="bg-overlay">
 <div id='navbar'>
 <a href="#" class="fa fa-linkedin"></a>
+<div class="spacer"></div>
+<input type="image" src="Images/personal_logo.png" id="home-icon">
+<div class="spacer"></div>
 <a href="#" class="fa fa-github"></a>
+
 </div>
 
-<div class="left-stick">
+<!--div class="left-stick">
 <input type="image" src="Images/white_up_arrow.png" id="home-icon">
-</div>
+</div-->
 
 <div class="ful-page">
 <div class="title-surr" id="surr">
