Added title and another card

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <link rel="icon" type="image/x-icon" href="Images/BI.ico">
 <style>
 </style>
-<!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"-->
 <link rel="stylesheet" href="style.css"/>
 </head>
 
@@ -25,10 +24,6 @@
 <a href="#" class="fa fa-github"></a>
 
 </div>
-
-<!--div class="left-stick">
-<input type="image" src="Images/white_up_arrow.png" id="home-icon">
-</div-->
 
 <div class="ful-page">
 <div class="title-surr" id="surr">
@@ -44,90 +39,36 @@
 </div>
 
 <div class="page-surr">
+<p class="title1">
+________ Personal Projects ________ 
+</p>
+
+</div>
+
+<div class="spacer"></div>
+
+
+<div class="page-surr">
 <div class="inn">
+<p class="content">
 CPPMON is a rudimentary system monitor for Unix systems written in C++, with the intent that its components can be reused in other projects.
+</p>
 </div>
 <img src="Images/BasicUI.png" class="project-img">
 
 </div>
-<pre style="text-shadow: 2px 2px 5px white;">
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-hh
 
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-h
-hh
+<div class="spacer"></div>
 
-h
-h
-h
-h
-hg
-h
-gf
+<div class="page-surr">
+<div class="inn">
+<p class="content">A digital version of an extended AQL Table used for determining the overall production quality based on a given product batch. This specific iteration has been developed by me with the assistance of some of my colleagues, in accordance with our guiding teacher's requests for one of our university projects.</p>
+<p class="content">As for understanding how to read the displayed tables, compared to the usual methods of either displaing the answers directly or navigating the table in acordance to it's rules of use, the GUI incorporates the advantage of viewing other potential results on the table and qwick navigation to said results, somewhat of a midle-ground between the previously mentioned methods.</p>
+</div>
 
-h
-hgfh
+<img src="Images/app_pic.jpeg" class="project-img">
 
-hg
-
-hh
-h
-h
-fg
-fg
-g
-g
-ffg
-g
-fg
-f
-df
-df
-d
-fd
-fd
-f
-d
-h
-h
-h
-
-h
-h
-h
-h
-h
-h
-h
-
-h
-</pre>
+</div>
 
 <script src="myScript.js"></script>
 
