Added ASCII titles & delimiters

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
 <img src="Images/gradient_frame.png" class="bg-overlay">
 <div id='navbar'>
-<a href="#" class="fa fa-linkedin"></a>
+<a href="https://www.linkedin.com/in/iulian-buz%C4%83%C8%9Bel-94ab5b18a/" class="fa fa-linkedin"></a>
 <div class="spacer"></div>
 <input type="image" src="Images/personal_logo.png" id="home-icon">
 <div class="spacer"></div>
-<a href="#" class="fa fa-github"></a>
+<a href="https://github.com/Buzatel-Iulian" class="fa fa-github"></a>
 
 </div>
 
@@ -39,18 +39,28 @@
 </div>
 
 <div class="page-surr">
+<div class="frame-surr">
 <p class="title1">
 ________ Personal Projects ________ 
 </p>
 
 </div>
 
-<div class="spacer"></div>
+<hr class="solid">
 
 
-<div class="page-surr">
+<div class="frame-surr">
 <div class="inn">
+<pre class="art">
+ ██████╗██████╗ ██████╗ ███╗   ███╗ ██████╗ ███╗   ██╗
+██╔════╝██╔══██╗██╔══██╗████╗ ████║██╔═══██╗████╗  ██║
+██║     ██████╔╝██████╔╝██╔████╔██║██║   ██║██╔██╗ ██║
+██║     ██╔═══╝ ██╔═══╝ ██║╚██╔╝██║██║   ██║██║╚██╗██║
+╚██████╗██║     ██║     ██║ ╚═╝ ██║╚██████╔╝██║ ╚████║
+ ╚═════╝╚═╝     ╚═╝     ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═══╝
+</pre>
 <p class="content">
+
 CPPMON is a rudimentary system monitor for Unix systems written in C++, with the intent that its components can be reused in other projects.
 </p>
 </div>
@@ -58,17 +68,34 @@ CPPMON is a rudimentary system monitor for Unix systems written in C++, with the
 
 </div>
 
-<div class="spacer"></div>
+<!--div class="spacer"></div-->
+<hr class="solid">
 
-<div class="page-surr">
+<div class="frame-surr">
 <div class="inn">
-<p class="content">A digital version of an extended AQL Table used for determining the overall production quality based on a given product batch. This specific iteration has been developed by me with the assistance of some of my colleagues, in accordance with our guiding teacher's requests for one of our university projects.</p>
+<pre class="art">
+     _    ___  _                          _ _           _   _             
+    / \  / _ \| |        __ _ _ __  _ __ | (_) ___ __ _| |_(_) ___  _ __  
+   / _ \| | | | |       / _` | '_ \| '_ \| | |/ __/ _` | __| |/ _ \| '_ \ 
+  / ___ \ |_| | |___   | (_| | |_) | |_) | | | (_| (_| | |_| | (_) | | | |
+ /_/   \_\__\_\_____|___\__,_| .__/| .__/|_|_|\___\__,_|\__|_|\___/|_| |_|
+                   |_____|   |_|   |_|                                    
+ </pre>
+<p class="content">
+
+
+A digital version of an extended AQL Table used for determining the overall production quality based on a given product batch. This specific iteration has been developed by me with the assistance of some of my colleagues, in accordance with our guiding teacher's requests for one of our university projects.</p>
 <p class="content">As for understanding how to read the displayed tables, compared to the usual methods of either displaing the answers directly or navigating the table in acordance to it's rules of use, the GUI incorporates the advantage of viewing other potential results on the table and qwick navigation to said results, somewhat of a midle-ground between the previously mentioned methods.</p>
 </div>
 
 <img src="Images/app_pic.jpeg" class="project-img">
 
 </div>
+
+<div class="spacer"></div>
+</div>
+
+<p id="end-note">That would be it for now</p>
 
 <script src="myScript.js"></script>
 
